# ozone

./: .gitignore  Cargo.toml  README.md  autocmd.toml  cliff.toml  config.toml  filetype.toml  keymap.toml  lsp.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
ozone-buffer/: Cargo.toml
ozone-buffer/src/: delta.rs  lib.rs  piece_table.rs
ozone-config/: Cargo.toml
ozone-config/src/: lib.rs  parse.rs
ozone-editor/: Cargo.toml
ozone-editor/src/: api.rs  autocmd.rs  brackets.rs  commands.rs  decoration.rs  diagnostics.rs  events.rs  fold.rs  keymap.rs  language.rs  lib.rs  options.rs  pane.rs  search.rs  text_object.rs  ui.rs  view.rs  workspace.rs  workspace_search.rs
ozone-editor/src/commands/: cursor.rs  edit.rs  file.rs  fold.rs  mod.rs  pane.rs  select.rs
ozone-editor/src/keymap/: keys.rs  mod.rs  stroke.rs
ozone-editor/src/workspace/: mod.rs  nav.rs  pane.rs
ozone-gui/: Cargo.toml
ozone-gui/src/: actions.rs  app.rs  canvas.rs  event.rs  input.rs  keys.rs  layout.rs  lib.rs  lsp.rs  minibuffer.rs  mouse.rs  notify.rs  picker.rs  popup.rs  render.rs  search.rs  shell.rs  statusbar.rs  syntax_cache.rs  terminals.rs  theme.rs  whichkey.rs
ozone-gui/src/components/: field.rs  list.rs  mod.rs  panel.rs  pill.rs
ozone-gui/src/overlay/: completion.rs  mod.rs  notify.rs  picker.rs  search.rs  whichkey.rs
ozone-gui/src/render/: decorations.rs  image.rs  mod.rs  text.rs  view.rs
ozone-lsp/: Cargo.toml
ozone-lsp/src/: client.rs  json.rs  lib.rs  protocol.rs  rpc.rs
ozone-syntax/: Cargo.toml
ozone-syntax/src/: dsl_buffer.rs  json.rs  json_buffer.rs  lib.rs  markdown.rs  markdown_buffer.rs  rust.rs  rust_buffer.rs  symbols.rs  toml.rs  toml_buffer.rs  yaml_buffer.rs
ozone-syntax/tests/: large_file_perf.rs
ozone-term/: Cargo.toml
ozone-term/src/: ansi.rs  lib.rs  vt.rs
ozone-term/src/pty/: mod.rs  portable_backend.rs
packaging/linux/: ozone.desktop  ozone.metainfo.xml
packaging/macos/: Info.plist  ozone.icns
src/: main.rs
themes/: brewery-stout.toml  brewery-wine.toml  catppuccin-mocha.toml
