[package]
name = "ozone"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "ozone-buffer",
    "ozone-editor",
    "ozone-gui",
    "ozone-syntax",
    "ozone-config",
    "ozone-term",
    "ozone-lsp",
]
exclude = ["aurea"]
resolver = "2"

[workspace.dependencies]
aurea       = "0.0.2"
toml        = "0.8"
ozone-buffer = { path = "ozone-buffer" }
ozone-editor = { path = "ozone-editor" }
ozone-gui    = { path = "ozone-gui" }
ozone-syntax = { path = "ozone-syntax" }
ozone-config = { path = "ozone-config" }
ozone-term   = { path = "ozone-term" }
ozone-lsp    = { path = "ozone-lsp" }

[dependencies]
ozone-editor = { workspace = true }
ozone-gui    = { workspace = true }
ozone-config = { workspace = true }

[patch.crates-io]
aurea            = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-ffi        = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-foundation = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-render     = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-runtime    = { git = "https://github.com/SkuldNorniern/aurea" }
