[package]
name = "ozone"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "ozone-buffer",
    "ozone-editor",
    "ozone-gui",
    "ozone-syntax",
    "ozone-config",
    "ozone-term",
    "ozone-lsp",
]
exclude = ["aurea", "taste", "oxygen", "sylven"]
resolver = "2"

[workspace.dependencies]
aurea       = "0.0.2"
toml        = "0.8"
taste       = { git = "https://github.com/standize/taste.git", branch = "dev" }
sylven         = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
sylven-lex     = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
sylven-runtime = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
ozone-buffer = { path = "ozone-buffer" }
ozone-editor = { path = "ozone-editor" }
ozone-gui    = { path = "ozone-gui" }
ozone-syntax = { path = "ozone-syntax" }
ozone-config = { path = "ozone-config" }
ozone-term   = { path = "ozone-term" }
ozone-lsp    = { path = "ozone-lsp" }

[dependencies]
ozone-editor = { workspace = true }
ozone-gui    = { workspace = true }
ozone-config = { workspace = true }

[patch."https://github.com/SkuldNorniern/sylven.git"]
sylven         = { path = "sylven" }
sylven-lex     = { path = "sylven/sylven-lex" }
sylven-parse   = { path = "sylven/sylven-parse" }
sylven-text    = { path = "sylven/sylven-text" }
sylven-tree    = { path = "sylven/sylven-tree" }
sylven-dsl     = { path = "sylven/sylven-dsl" }
sylven-runtime = { path = "sylven/sylven-runtime" }

[patch.crates-io]
aurea            = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-ffi        = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-foundation = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-render     = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-runtime    = { git = "https://github.com/SkuldNorniern/aurea" }
