[package]
name = "ozone"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "ozone-buffer",
    "ozone-editor",
    "ozone-gui",
    "ozone-syntax",
    "ozone-config",
    "ozone-term",
    "ozone-lsp",
]
exclude = ["aurea", "taste", "oxygen", "sylven"]
resolver = "2"

[workspace.dependencies]
aurea       = "0.0.2"
toml        = "0.9"
taste       = { git = "https://github.com/standize/taste.git", branch = "dev" }
sylven         = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
sylven-lex     = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
sylven-runtime = { git = "https://github.com/SkuldNorniern/sylven.git", branch = "main" }
ozone-buffer = { path = "ozone-buffer" }
ozone-editor = { path = "ozone-editor" }
ozone-gui    = { path = "ozone-gui" }
ozone-syntax = { path = "ozone-syntax" }
ozone-config = { path = "ozone-config" }
ozone-term   = { path = "ozone-term" }
ozone-lsp    = { path = "ozone-lsp" }

[dependencies]
ozone-editor = { workspace = true }
ozone-gui    = { workspace = true }
ozone-config = { workspace = true }

[patch.crates-io]
aurea            = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-ffi        = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-foundation = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-render     = { git = "https://github.com/SkuldNorniern/aurea" }
aurea-runtime    = { git = "https://github.com/SkuldNorniern/aurea" }
# ZenGPU crates are referenced by aurea-render's `zengpu` feature by crates.io
# version but aren't published yet — resolve them from the ZenGPU repo so a
# `--features zengpu` build works. (Patches apply graph-wide, incl. inside aurea.)
zengpu           = { git = "https://github.com/SkuldNorniern/ZenGPU" }
zengpu-hal       = { git = "https://github.com/SkuldNorniern/ZenGPU" }
zengpu-vulkan    = { git = "https://github.com/SkuldNorniern/ZenGPU" }
