[package]
name = "ozone-gui"
version = "0.1.0"
edition = "2024"

[features]
default = []
# GPU rendering via aurea's ZenGPU/Vulkan backend. Opt-in (pulls in ash/Vulkan);
# off by default so normal builds stay CPU-only. With this feature the runtime
# `hardware_acceleration` toggle (config / --gpu / OZONE_GPU) can select the GPU.
zengpu = ["aurea/zengpu"]

[dependencies]
ozone-editor = { workspace = true }
ozone-buffer = { workspace = true }
ozone-syntax = { workspace = true }
ozone-config = { workspace = true }
ozone-term   = { workspace = true }
ozone-lsp    = { workspace = true }
taste        = { workspace = true }
aurea        = { workspace = true }
# Pure-Rust decoders only (no system/C deps): covers the common raster formats.
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
    "ico",
    "tga",
    "pnm",
    "qoi",
    "ff",
] }
arboard    = "3"
rfd        = "0.15"
toml.workspace = true
